--- a/post_Japan_Kansai.html
+++ b/post_Japan_Kansai.html
@@ -100,7 +100,7 @@
 									</div>
 									<div class="mySlides fade">
 										<img src="images/Japan_Kansai/6_river.JPG" style="width:100%">
-										<div class="text">宇治河</div>
+										<div class="text">宇治川</div>
 									</div>
 									<div class="mySlides fade">
 										<img src="images/Japan_Kansai/7_nara.jpg" style="width:100%">
@@ -145,7 +145,7 @@
 									</div>
 								</p>
 
-								<p style="text-align:justify">总体而言：<br>1. 铁路交通非常方便，京都站和大阪梅田站非常大容易迷路，第一次在这两站换乘的话记得留足时间。<br>2. 京都的部分景区需要乘坐公共汽车（如果有钱可以直接打出租车），京都的公共汽车是后门上车，如果后门有刷卡机的话记得先刷一下（上车刷卡说明是分段计费，如果没有刷卡机就是全程统一价格）。<br>3. 早餐有日式（朝定食是早饭可以吃）和西式，我们一般是早上出门看看附近有什么开着的餐馆，找一家想吃的走进去，早餐一般可以walk in。<br>4. 饭前应该说丰俭由人，几十人民币就可以吃一餐饱饭；有的店比较咸，基本没吃到过很辣的；高级餐厅需要加钱，注意热门餐厅可能需要预订。<br>5. 水果很贵，便利店和售货机的瓶装饮料、奶昔基本都很好喝不踩雷。<br>6. 京都的公交车原则上不能携带大件行李，酒店入住时间一般是下午三点或者五点，地铁站一般会有储物柜（景区附近没注意），需要合理安排行程。<br>7. 基本只有发生购买行为的时候需要说话，一般来说日语和英语好像都可以，少数只能说日语；关西国际机场的很多（不是全部）工作人员会说中文，在别的地方没怎么碰到过中文很熟练的店员；观察来说一般好像都不会介意google translate之类的翻译软件，请做好对面不会说中文的心理准备。</p>
+								<p style="text-align:justify">总体而言：<br>1. 铁路交通非常方便，京都站和大阪梅田站非常大容易迷路，第一次在这两站换乘的话记得留足时间。<br>2. 京都的部分景区需要乘坐公共汽车（如果有钱可以直接打出租车），京都的公共汽车是后门上车，如果后门有刷卡机的话记得先刷一下（上车刷卡说明是分段计费，如果没有刷卡机就是全程统一价格）。<br>3. 早餐有日式（朝定食是早饭可以吃）和西式，我们一般是早上出门看看附近有什么开着的餐馆，找一家想吃的走进去，早餐一般可以walk in。<br>4. 饭钱应该说丰俭由人，几十人民币就可以吃一餐饱饭；有的店比较咸，基本没吃到过很辣的；高级餐厅需要加钱，注意热门餐厅可能需要预订。<br>5. 水果很贵，便利店和售货机的瓶装饮料、奶昔基本都很好喝不踩雷。<br>6. 京都的公交车原则上不能携带大件行李，酒店入住时间一般是下午三点或者五点，地铁站一般会有储物柜（景区附近没注意），需要合理安排行程。<br>7. 基本只有发生购买行为的时候需要说话，一般来说日语和英语好像都可以，少数只能说日语；关西国际机场的很多（不是全部）工作人员会说中文，在别的地方没怎么碰到过中文很熟练的店员；观察来说一般好像都不会介意google translate之类的翻译软件，请做好对面不会说中文的心理准备。</p>
 
 								<h3>Day 1 - 南京 <i class="fa fa-plane" aria-hidden="true"></i> 关西国际机场 <i class="fa fa-subway" aria-hidden="true"></i> 京都</h3>
 								<p style="text-align:justify">第一天上午坐飞机前往关西国际机场，落地取行李以后买了Haruka票前往京都。发车时间最近的一班车已经没有指定席了，幸运的坐到了自由席的座位。</p>
@@ -155,11 +155,11 @@
 								<p style="text-align: justify;">然后坐铁路回了京都站，绕了很久终于到了附近的AEON，逛了大创、吃了一风堂拉面，然后又绕了很久到<i class="fa fa-map-marker" aria-hidden="true"><a href="https://www.kyoto-tower.jp/zh-cn/">京都塔</a></i>，途中见到了京都站前的小型音乐喷泉，很有意思。等塔看夜景视角很不错，在京都塔赶上了京吹复刻活动的第一天，但想要的纪念币都已经SOLD OUT，买了一枚吉祥物的纪念币（吉祥物真的很可爱www）。</p>
 
 								<h3>Day 2 - 大阪</h3>
-								<p style="text-align:justify">早上吃了麦麦早饭，松饼很香但齁甜。然后坐铁路去大阪。先去了<i class="fa fa-map-marker" aria-hidden="true">大阪城</i>，走到<i class="fa fa-map-marker" aria-hidden="true">天守阁</i>，为了好看的票面排队购买纸质票（省时间考虑可以买电子票，快很多），又逛了一圈<i class="fa fa-map-marker" aria-hidden="true">西之丸庭院</i>。出来以后散步去了<i class="fa fa-map-marker" aria-hidden="true">通天阁</i>，吃到了美味的大阪烧和炒面。时间充裕的话</p>
+								<p style="text-align:justify">早上吃了麦麦早饭，松饼很香但齁甜。然后坐铁路去大阪。先去了<i class="fa fa-map-marker" aria-hidden="true">大阪城</i>，走到<i class="fa fa-map-marker" aria-hidden="true">天守阁</i>，为了好看的票面排队购买纸质票（省时间考虑可以买电子票，快很多），又逛了一圈<i class="fa fa-map-marker" aria-hidden="true">西之丸庭院</i>。出来以后散步去了<i class="fa fa-map-marker" aria-hidden="true">通天阁</i>，吃到了美味的大阪烧和炒面。</p>
 
 								<p style="text-align: justify;">下午在<i class="fa fa-map-marker" aria-hidden="true">道顿堀</i>和<i class="fa fa-map-marker" aria-hidden="true">心斋桥</i>散步，路过了很多很多扭蛋店。<i class="fa fa-map-marker" aria-hidden="true">黑门市场</i>有很多小吃，冰糖葫芦似乎格外受欧美游客欢迎。</p>
 
-								<p style="text-align: justify;">晚饭品尝了日本的萨莉亚，然后信心满满的去梅田站找堂吉诃德本本铺，转了半天才找到，然后发现根本没有拍立得或者相纸或者富士一次性胶片机。晚上坐铁路回了酒店。走了太多路，检验了一下休足时间的质量，效果不错。</p>
+								<p style="text-align: justify;">晚饭品尝了日本的萨莉亚，然后信心满满的去梅田站找堂吉诃德本铺，转了半天才找到，然后发现根本没有拍立得或者相纸或者富士一次性胶片机。晚上坐铁路回了酒店。走了太多路，检验了一下休足时间的质量，效果不错。</p>
 
 								<h3>Day 3 - 宇治 + 奈良</h3>
 								<p style="text-align:justify">在一家日式餐厅享用了美味的早餐，然后坐铁路前往宇治。在JR宇治站边上的游客中心可以领取京吹巡礼地图。然后刚好碰到伊藤久右卫门开门，品尝了美味的抹茶甜品（抹茶丸子好吃！）。参观了<i class="fa fa-map-marker" aria-hidden="true"><a href="https://www.byodoin.or.jp/ch1/">平等院</a></i>，凤凰堂是10日元硬币上的图案，形状像一只要展翅而飞的鸟，顶部有金色凤凰像，进内部参观需要排队。平等院的御朱印帐很喜欢。出来以后沿着宇治川散步，打卡了京吹地图的各个点位。</p>
